--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "silverstripe/recipe-plugin": "^1.2",
         "silverstripe/recipe-cms": "^4.11.0",
         "silverstripe-themes/simple": "^3.2.0",
-        "silverstripe/login-forms": "^4.7.0"
+        "silverstripe/login-forms": "^4.7.0",
+        "dnadesign/silverstripe-elemental": "^4.9"
     },
     "extra": {
         "resources-dir": "_resources",
