Rename config files to be consistent

--- a/app/_config/mimevalidator.yml
+++ b/app/_config/mimevalidator.yml
@@ -1,5 +1,5 @@
 ---
-Name: app-mimeuploadvalidator
+Name: project-mimeuploadvalidator
 After: '#mimeuploadvalidator'
 Only:
   moduleexists: 'silverstripe/mimevalidator'
