--- a/app/_config/mysite.yml
+++ b/app/_config/mysite.yml
@@ -1,5 +1,5 @@
 ---
-Name: myproject
+Name: project
 ---
 SilverStripe\Core\Manifest\ModuleManifest:
   project: app
@@ -7,7 +7,7 @@ SilverStripe\Core\Manifest\ModuleManifest:
 # UTF8MB4 has limited support in older MySQL versions.
 # Remove this configuration if you experience issues.
 ---
-Name: myproject-database
+Name: project-database
 ---
 SilverStripe\ORM\Connect\MySQLDatabase:
   connection_charset: utf8mb4
