--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "silverstripe/recipe-cms": "^4.11.0",
         "silverstripe-themes/simple": "^3.2.0",
         "silverstripe/login-forms": "^4.7.0",
-        "dnadesign/silverstripe-elemental": "^4.9"
+        "dnadesign/silverstripe-elemental": "^4.9",
+        "dnadesign/silverstripe-elemental-userforms": "^3.2"
     },
     "extra": {
         "resources-dir": "_resources",
