--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "silverstripe-themes/simple": "^3.2.0",
         "silverstripe/login-forms": "^4.7.0",
         "dnadesign/silverstripe-elemental": "^4.9",
-        "dnadesign/silverstripe-elemental-userforms": "^3.2"
+        "dnadesign/silverstripe-elemental-userforms": "^3.2",
+        "mikehaertl/phpwkhtmltopdf": "^2.5"
     },
     "extra": {
         "resources-dir": "_resources",
