--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,18 @@
         "dnadesign/silverstripe-elemental-userforms": "^3.2",
         "mikehaertl/phpwkhtmltopdf": "^2.5",
         "guysartorelli/silverstripe-gridfield-preview": "^0.1",
-        "silverstripe/framework": "~4.11.0@stable",
+        "silverstripe/framework": "^4.11.0",
         "silverstripe/admin": "^1.11.0",
         "silverstripe/cms": "^4.11.0",
         "silverstripe/asset-admin": "^1.11.0",
         "silverstripe/errorpage": "^1.11.0",
         "silverstripe/versioned": "^1.11.0",
-        "silverstripe/assets": "~1.11.0@stable",
-        "silverstripe/config": "~1.4.0@stable",
-        "silverstripe/mimevalidator": "~2.4.0@stable"
+        "silverstripe/assets": "^1.11.0",
+        "silverstripe/config": "^1.4.0",
+        "silverstripe/mimevalidator": "^2.4.0"
+    },
+    "require-dev": {
+        "dnadesign/silverstripe-populate": "^2.1"
     },
     "extra": {
         "resources-dir": "_resources",
@@ -43,15 +46,7 @@
         ],
         "expose": [
             "app/src/BeyondDocs/Pdf/javascript"
-        ],
-        "project-dependencies-installed": {
-            "php": "^7.4 || ^8.0",
-            "silverstripe/assets": "~1.11.0@stable",
-            "silverstripe/config": "~1.4.0@stable",
-            "silverstripe/framework": "~4.11.0@stable",
-            "silverstripe/mimevalidator": "~2.4.0@stable",
-            "silverstripe/recipe-plugin": "^1.2"
-        }
+        ]
     },
     "config": {
         "process-timeout": 600,
@@ -61,11 +56,5 @@
             "silverstripe/vendor-plugin": true
         }
     },
-    "prefer-stable": true,
-    "provide": {
-        "silverstripe/recipe-core": "4.11.0"
-    },
-    "require-dev": {
-        "dnadesign/silverstripe-populate": "^2.1"
-    }
+    "prefer-stable": true
 }
